--- a/styles/slide.css
+++ b/styles/slide.css
@@ -1,7 +1,6 @@
   .slide-container {
-    width: 800px;
+    width: 70%;
     float:left;
-    margin-right:25px;
   }
 
   .slide {
@@ -29,6 +28,10 @@
 
   #slides {
     display: none
+  }
+
+  #slides img {
+    width:100%;
   }
 
   #slides .slidesjs-navigation {
@@ -62,7 +65,7 @@
     width: 13px;
     height: 0;
     padding-top: 13px;
-    background-image: url(img/pagination.png);
+    // background-image: url(img/pagination.png);
     background-position: 0 0;
     float: left;
     overflow: hidden;
